[NOJIRA]: Use valueOf instead of deprecated constructors